fix: z-index

--- a/carousel.css
+++ b/carousel.css
@@ -10,6 +10,8 @@
   justify-content: center;
   align-items: center;
 
+  z-index: 3;
+
   background-color: rgba(241, 201, 83, 1);
 
   @media screen and (min-width: 620px) {
